# voice-transcription

./: .gitattributes  .gitignore  CMakeLists.txt  CmakeLists.txt.mock  README.md  fallback_setup.bat  improved_setup.bat  improved_setup_fixed.bat  progress.md  project_spec.md  requirements.txt  setup.bat  setup_and_run.bat  setup_dependencies.bat  test_application.py
.github/workflows/: build.yml
models/vosk/vosk-model-en-us-0.22/: README
models/vosk/vosk-model-en-us-0.22/conf/: ivector.conf  model.conf
models/vosk/vosk-model-en-us-0.22/graph/: disambig_tid.int  words.txt
models/vosk/vosk-model-en-us-0.22/graph/phones/: align_lexicon.int  align_lexicon.txt  disambig.int  disambig.txt  silence.csl  word_boundary.txt
models/vosk/vosk-model-en-us-0.22/rnnlm/: feat_embedding.final.mat  special_symbol_opts.conf  special_symbol_opts.txt  word_feats.txt
src/backend/: audio_stream.cpp  keyboard_sim.cpp  portaudio_mock.cpp  vosk_api.cpp  vosk_transcription_engine.cpp  webrtc_vad.cpp  window_manager.cpp
src/backend/include/: audio_stream.h  keyboard_sim.h  portaudio.h  vosk_api.h  vosk_api.h.txt  vosk_transcription_engine.h  webrtc_vad.h  window_manager.h
src/bindings/: pybind_wrapper.cpp  pybind_wrapper.cpp.txt
src/config/: settings.json
src/gui/: audio_level_meter.py  device_selector.py  main_window.py  shortcut_capture.py  status_indicator.py
src/utils/: command_processor.py  enhanced_command_processor.py  error_handler.py  error_recovery_system.p0y  logger.py
tests/: audio_stream_test.cpp
